// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pill matches the choice snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pill
    choice={
      Array [
        Object {
          "id": 1,
          "label": "foo",
        },
        Object {
          "id": 2,
          "label": "bar",
        },
        Object {
          "id": 3,
          "label": "baz",
        },
        Object {
          "id": 4,
          "label": "qux",
        },
      ]
    }
    classes={
      Object {
        "assistiveText": "assistiveText",
        "bottom": "bottom",
        "container": "container",
        "disabled": "disabled",
        "errorAssistiveText": "errorAssistiveText",
        "errorIcon": "errorIcon",
        "label": "label",
        "left": "left",
        "top": "top",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <div
          className={undefined}
        >
          <UNDEFINED
            disabled={undefined}
            id={1}
            idPrefix={undefined}
            leftIcon={undefined}
            onClick={[Function]}
            rightIcon={undefined}
            selected={undefined}
          >
            foo
          </UNDEFINED>
          <UNDEFINED
            disabled={undefined}
            id={2}
            idPrefix={undefined}
            leftIcon={undefined}
            onClick={[Function]}
            rightIcon={undefined}
            selected={undefined}
          >
            bar
          </UNDEFINED>
          <UNDEFINED
            disabled={undefined}
            id={3}
            idPrefix={undefined}
            leftIcon={undefined}
            onClick={[Function]}
            rightIcon={undefined}
            selected={undefined}
          >
            baz
          </UNDEFINED>
          <UNDEFINED
            disabled={undefined}
            id={4}
            idPrefix={undefined}
            leftIcon={undefined}
            onClick={[Function]}
            rightIcon={undefined}
            selected={undefined}
          >
            qux
          </UNDEFINED>
        </div>,
        undefined,
      ],
      "className": "container",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <UNDEFINED
              disabled={undefined}
              id={1}
              idPrefix={undefined}
              leftIcon={undefined}
              onClick={[Function]}
              rightIcon={undefined}
              selected={undefined}
            >
              foo
            </UNDEFINED>,
            <UNDEFINED
              disabled={undefined}
              id={2}
              idPrefix={undefined}
              leftIcon={undefined}
              onClick={[Function]}
              rightIcon={undefined}
              selected={undefined}
            >
              bar
            </UNDEFINED>,
            <UNDEFINED
              disabled={undefined}
              id={3}
              idPrefix={undefined}
              leftIcon={undefined}
              onClick={[Function]}
              rightIcon={undefined}
              selected={undefined}
            >
              baz
            </UNDEFINED>,
            <UNDEFINED
              disabled={undefined}
              id={4}
              idPrefix={undefined}
              leftIcon={undefined}
              onClick={[Function]}
              rightIcon={undefined}
              selected={undefined}
            >
              qux
            </UNDEFINED>,
          ],
          "className": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "function",
            "props": Object {
              "children": "foo",
              "disabled": undefined,
              "id": 1,
              "idPrefix": undefined,
              "leftIcon": undefined,
              "onClick": [Function],
              "rightIcon": undefined,
              "selected": undefined,
            },
            "ref": null,
            "rendered": "foo",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "InnerComponent": [Function],
              "displayName": "JssContextSubscriber(Choice)",
              "render": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "function",
            "props": Object {
              "children": "bar",
              "disabled": undefined,
              "id": 2,
              "idPrefix": undefined,
              "leftIcon": undefined,
              "onClick": [Function],
              "rightIcon": undefined,
              "selected": undefined,
            },
            "ref": null,
            "rendered": "bar",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "InnerComponent": [Function],
              "displayName": "JssContextSubscriber(Choice)",
              "render": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "function",
            "props": Object {
              "children": "baz",
              "disabled": undefined,
              "id": 3,
              "idPrefix": undefined,
              "leftIcon": undefined,
              "onClick": [Function],
              "rightIcon": undefined,
              "selected": undefined,
            },
            "ref": null,
            "rendered": "baz",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "InnerComponent": [Function],
              "displayName": "JssContextSubscriber(Choice)",
              "render": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
          Object {
            "instance": null,
            "key": "4",
            "nodeType": "function",
            "props": Object {
              "children": "qux",
              "disabled": undefined,
              "id": 4,
              "idPrefix": undefined,
              "leftIcon": undefined,
              "onClick": [Function],
              "rightIcon": undefined,
              "selected": undefined,
            },
            "ref": null,
            "rendered": "qux",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "InnerComponent": [Function],
              "displayName": "JssContextSubscriber(Choice)",
              "render": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
        ],
        "type": "div",
      },
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <div
            className={undefined}
          >
            <UNDEFINED
              disabled={undefined}
              id={1}
              idPrefix={undefined}
              leftIcon={undefined}
              onClick={[Function]}
              rightIcon={undefined}
              selected={undefined}
            >
              foo
            </UNDEFINED>
            <UNDEFINED
              disabled={undefined}
              id={2}
              idPrefix={undefined}
              leftIcon={undefined}
              onClick={[Function]}
              rightIcon={undefined}
              selected={undefined}
            >
              bar
            </UNDEFINED>
            <UNDEFINED
              disabled={undefined}
              id={3}
              idPrefix={undefined}
              leftIcon={undefined}
              onClick={[Function]}
              rightIcon={undefined}
              selected={undefined}
            >
              baz
            </UNDEFINED>
            <UNDEFINED
              disabled={undefined}
              id={4}
              idPrefix={undefined}
              leftIcon={undefined}
              onClick={[Function]}
              rightIcon={undefined}
              selected={undefined}
            >
              qux
            </UNDEFINED>
          </div>,
          undefined,
        ],
        "className": "container",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <UNDEFINED
                disabled={undefined}
                id={1}
                idPrefix={undefined}
                leftIcon={undefined}
                onClick={[Function]}
                rightIcon={undefined}
                selected={undefined}
              >
                foo
              </UNDEFINED>,
              <UNDEFINED
                disabled={undefined}
                id={2}
                idPrefix={undefined}
                leftIcon={undefined}
                onClick={[Function]}
                rightIcon={undefined}
                selected={undefined}
              >
                bar
              </UNDEFINED>,
              <UNDEFINED
                disabled={undefined}
                id={3}
                idPrefix={undefined}
                leftIcon={undefined}
                onClick={[Function]}
                rightIcon={undefined}
                selected={undefined}
              >
                baz
              </UNDEFINED>,
              <UNDEFINED
                disabled={undefined}
                id={4}
                idPrefix={undefined}
                leftIcon={undefined}
                onClick={[Function]}
                rightIcon={undefined}
                selected={undefined}
              >
                qux
              </UNDEFINED>,
            ],
            "className": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "function",
              "props": Object {
                "children": "foo",
                "disabled": undefined,
                "id": 1,
                "idPrefix": undefined,
                "leftIcon": undefined,
                "onClick": [Function],
                "rightIcon": undefined,
                "selected": undefined,
              },
              "ref": null,
              "rendered": "foo",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "InnerComponent": [Function],
                "displayName": "JssContextSubscriber(Choice)",
                "render": [Function],
                Symbol(Symbol.hasInstance): [Function],
              },
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "function",
              "props": Object {
                "children": "bar",
                "disabled": undefined,
                "id": 2,
                "idPrefix": undefined,
                "leftIcon": undefined,
                "onClick": [Function],
                "rightIcon": undefined,
                "selected": undefined,
              },
              "ref": null,
              "rendered": "bar",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "InnerComponent": [Function],
                "displayName": "JssContextSubscriber(Choice)",
                "render": [Function],
                Symbol(Symbol.hasInstance): [Function],
              },
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "function",
              "props": Object {
                "children": "baz",
                "disabled": undefined,
                "id": 3,
                "idPrefix": undefined,
                "leftIcon": undefined,
                "onClick": [Function],
                "rightIcon": undefined,
                "selected": undefined,
              },
              "ref": null,
              "rendered": "baz",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "InnerComponent": [Function],
                "displayName": "JssContextSubscriber(Choice)",
                "render": [Function],
                Symbol(Symbol.hasInstance): [Function],
              },
            },
            Object {
              "instance": null,
              "key": "4",
              "nodeType": "function",
              "props": Object {
                "children": "qux",
                "disabled": undefined,
                "id": 4,
                "idPrefix": undefined,
                "leftIcon": undefined,
                "onClick": [Function],
                "rightIcon": undefined,
                "selected": undefined,
              },
              "ref": null,
              "rendered": "qux",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "InnerComponent": [Function],
                "displayName": "JssContextSubscriber(Choice)",
                "render": [Function],
                Symbol(Symbol.hasInstance): [Function],
              },
            },
          ],
          "type": "div",
        },
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`Pill matches the group snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pill
    classes={
      Object {
        "assistiveText": "assistiveText",
        "bottom": "bottom",
        "container": "container",
        "disabled": "disabled",
        "errorAssistiveText": "errorAssistiveText",
        "errorIcon": "errorIcon",
        "label": "label",
        "left": "left",
        "top": "top",
      }
    }
    group={
      Array [
        Object {
          "id": 1,
          "label": "foo",
        },
        Object {
          "id": 2,
          "label": "bar",
        },
        Object {
          "id": 3,
          "label": "baz",
        },
        Object {
          "id": 4,
          "label": "qux",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <UNDEFINED
          idPrefix={undefined}
          items={
            Array [
              Object {
                "id": 1,
                "label": "foo",
              },
              Object {
                "id": 2,
                "label": "bar",
              },
              Object {
                "id": 3,
                "label": "baz",
              },
              Object {
                "id": 4,
                "label": "qux",
              },
            ]
          }
          onSelect={[Function]}
          selected={undefined}
        />,
        undefined,
      ],
      "className": "container",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "idPrefix": undefined,
          "items": Array [
            Object {
              "id": 1,
              "label": "foo",
            },
            Object {
              "id": 2,
              "label": "bar",
            },
            Object {
              "id": 3,
              "label": "baz",
            },
            Object {
              "id": 4,
              "label": "qux",
            },
          ],
          "onSelect": [Function],
          "selected": undefined,
        },
        "ref": null,
        "rendered": null,
        "type": Object {
          "$$typeof": Symbol(react.forward_ref),
          "InnerComponent": [Function],
          "displayName": "JssContextSubscriber(Group)",
          "render": [Function],
          Symbol(Symbol.hasInstance): [Function],
        },
      },
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <UNDEFINED
            idPrefix={undefined}
            items={
              Array [
                Object {
                  "id": 1,
                  "label": "foo",
                },
                Object {
                  "id": 2,
                  "label": "bar",
                },
                Object {
                  "id": 3,
                  "label": "baz",
                },
                Object {
                  "id": 4,
                  "label": "qux",
                },
              ]
            }
            onSelect={[Function]}
            selected={undefined}
          />,
          undefined,
        ],
        "className": "container",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "idPrefix": undefined,
            "items": Array [
              Object {
                "id": 1,
                "label": "foo",
              },
              Object {
                "id": 2,
                "label": "bar",
              },
              Object {
                "id": 3,
                "label": "baz",
              },
              Object {
                "id": 4,
                "label": "qux",
              },
            ],
            "onSelect": [Function],
            "selected": undefined,
          },
          "ref": null,
          "rendered": null,
          "type": Object {
            "$$typeof": Symbol(react.forward_ref),
            "InnerComponent": [Function],
            "displayName": "JssContextSubscriber(Group)",
            "render": [Function],
            Symbol(Symbol.hasInstance): [Function],
          },
        },
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`Pill matches the stack snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pill
    classes={
      Object {
        "assistiveText": "assistiveText",
        "bottom": "bottom",
        "container": "container",
        "disabled": "disabled",
        "errorAssistiveText": "errorAssistiveText",
        "errorIcon": "errorIcon",
        "label": "label",
        "left": "left",
        "top": "top",
      }
    }
    stack={
      Array [
        Object {
          "id": 1,
          "label": "foo",
        },
        Object {
          "id": 2,
          "label": "bar",
        },
        Object {
          "id": 3,
          "label": "baz",
        },
        Object {
          "id": 4,
          "label": "qux",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        undefined,
        <div
          className={undefined}
        >
          <UNDEFINED
            disabled={undefined}
            id={1}
            idPrefix={undefined}
            onClick={null}
            onClose={null}
          >
            foo
          </UNDEFINED>
          <UNDEFINED
            disabled={undefined}
            id={2}
            idPrefix={undefined}
            onClick={null}
            onClose={null}
          >
            bar
          </UNDEFINED>
          <UNDEFINED
            disabled={undefined}
            id={3}
            idPrefix={undefined}
            onClick={null}
            onClose={null}
          >
            baz
          </UNDEFINED>
          <UNDEFINED
            disabled={undefined}
            id={4}
            idPrefix={undefined}
            onClick={null}
            onClose={null}
          >
            qux
          </UNDEFINED>
        </div>,
        undefined,
      ],
      "className": "container",
      "id": undefined,
      "style": undefined,
    },
    "ref": null,
    "rendered": Array [
      undefined,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <UNDEFINED
              disabled={undefined}
              id={1}
              idPrefix={undefined}
              onClick={null}
              onClose={null}
            >
              foo
            </UNDEFINED>,
            <UNDEFINED
              disabled={undefined}
              id={2}
              idPrefix={undefined}
              onClick={null}
              onClose={null}
            >
              bar
            </UNDEFINED>,
            <UNDEFINED
              disabled={undefined}
              id={3}
              idPrefix={undefined}
              onClick={null}
              onClose={null}
            >
              baz
            </UNDEFINED>,
            <UNDEFINED
              disabled={undefined}
              id={4}
              idPrefix={undefined}
              onClick={null}
              onClose={null}
            >
              qux
            </UNDEFINED>,
          ],
          "className": undefined,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": "1",
            "nodeType": "function",
            "props": Object {
              "children": "foo",
              "disabled": undefined,
              "id": 1,
              "idPrefix": undefined,
              "onClick": null,
              "onClose": null,
            },
            "ref": null,
            "rendered": "foo",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "InnerComponent": [Function],
              "displayName": "JssContextSubscriber(Stack)",
              "render": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
          Object {
            "instance": null,
            "key": "2",
            "nodeType": "function",
            "props": Object {
              "children": "bar",
              "disabled": undefined,
              "id": 2,
              "idPrefix": undefined,
              "onClick": null,
              "onClose": null,
            },
            "ref": null,
            "rendered": "bar",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "InnerComponent": [Function],
              "displayName": "JssContextSubscriber(Stack)",
              "render": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
          Object {
            "instance": null,
            "key": "3",
            "nodeType": "function",
            "props": Object {
              "children": "baz",
              "disabled": undefined,
              "id": 3,
              "idPrefix": undefined,
              "onClick": null,
              "onClose": null,
            },
            "ref": null,
            "rendered": "baz",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "InnerComponent": [Function],
              "displayName": "JssContextSubscriber(Stack)",
              "render": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
          Object {
            "instance": null,
            "key": "4",
            "nodeType": "function",
            "props": Object {
              "children": "qux",
              "disabled": undefined,
              "id": 4,
              "idPrefix": undefined,
              "onClick": null,
              "onClose": null,
            },
            "ref": null,
            "rendered": "qux",
            "type": Object {
              "$$typeof": Symbol(react.forward_ref),
              "InnerComponent": [Function],
              "displayName": "JssContextSubscriber(Stack)",
              "render": [Function],
              Symbol(Symbol.hasInstance): [Function],
            },
          },
        ],
        "type": "div",
      },
      undefined,
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          undefined,
          <div
            className={undefined}
          >
            <UNDEFINED
              disabled={undefined}
              id={1}
              idPrefix={undefined}
              onClick={null}
              onClose={null}
            >
              foo
            </UNDEFINED>
            <UNDEFINED
              disabled={undefined}
              id={2}
              idPrefix={undefined}
              onClick={null}
              onClose={null}
            >
              bar
            </UNDEFINED>
            <UNDEFINED
              disabled={undefined}
              id={3}
              idPrefix={undefined}
              onClick={null}
              onClose={null}
            >
              baz
            </UNDEFINED>
            <UNDEFINED
              disabled={undefined}
              id={4}
              idPrefix={undefined}
              onClick={null}
              onClose={null}
            >
              qux
            </UNDEFINED>
          </div>,
          undefined,
        ],
        "className": "container",
        "id": undefined,
        "style": undefined,
      },
      "ref": null,
      "rendered": Array [
        undefined,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <UNDEFINED
                disabled={undefined}
                id={1}
                idPrefix={undefined}
                onClick={null}
                onClose={null}
              >
                foo
              </UNDEFINED>,
              <UNDEFINED
                disabled={undefined}
                id={2}
                idPrefix={undefined}
                onClick={null}
                onClose={null}
              >
                bar
              </UNDEFINED>,
              <UNDEFINED
                disabled={undefined}
                id={3}
                idPrefix={undefined}
                onClick={null}
                onClose={null}
              >
                baz
              </UNDEFINED>,
              <UNDEFINED
                disabled={undefined}
                id={4}
                idPrefix={undefined}
                onClick={null}
                onClose={null}
              >
                qux
              </UNDEFINED>,
            ],
            "className": undefined,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": "1",
              "nodeType": "function",
              "props": Object {
                "children": "foo",
                "disabled": undefined,
                "id": 1,
                "idPrefix": undefined,
                "onClick": null,
                "onClose": null,
              },
              "ref": null,
              "rendered": "foo",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "InnerComponent": [Function],
                "displayName": "JssContextSubscriber(Stack)",
                "render": [Function],
                Symbol(Symbol.hasInstance): [Function],
              },
            },
            Object {
              "instance": null,
              "key": "2",
              "nodeType": "function",
              "props": Object {
                "children": "bar",
                "disabled": undefined,
                "id": 2,
                "idPrefix": undefined,
                "onClick": null,
                "onClose": null,
              },
              "ref": null,
              "rendered": "bar",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "InnerComponent": [Function],
                "displayName": "JssContextSubscriber(Stack)",
                "render": [Function],
                Symbol(Symbol.hasInstance): [Function],
              },
            },
            Object {
              "instance": null,
              "key": "3",
              "nodeType": "function",
              "props": Object {
                "children": "baz",
                "disabled": undefined,
                "id": 3,
                "idPrefix": undefined,
                "onClick": null,
                "onClose": null,
              },
              "ref": null,
              "rendered": "baz",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "InnerComponent": [Function],
                "displayName": "JssContextSubscriber(Stack)",
                "render": [Function],
                Symbol(Symbol.hasInstance): [Function],
              },
            },
            Object {
              "instance": null,
              "key": "4",
              "nodeType": "function",
              "props": Object {
                "children": "qux",
                "disabled": undefined,
                "id": 4,
                "idPrefix": undefined,
                "onClick": null,
                "onClose": null,
              },
              "ref": null,
              "rendered": "qux",
              "type": Object {
                "$$typeof": Symbol(react.forward_ref),
                "InnerComponent": [Function],
                "displayName": "JssContextSubscriber(Stack)",
                "render": [Function],
                Symbol(Symbol.hasInstance): [Function],
              },
            },
          ],
          "type": "div",
        },
        undefined,
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;

exports[`Pill styles matches the snapshot 1`] = `
Object {
  "assistiveText": Object {
    "color": "#aaaaaa",
  },
  "bottom": Object {
    "height": 20,
    "marginTop": 4,
  },
  "container": Object {
    "marginBottom": 8,
    "position": "relative",
  },
  "disabled": Object {
    "& $label": Object {
      "color": "#dddddd",
    },
  },
  "errorAssistiveText": Object {
    "color": "#db3737",
  },
  "errorIcon": Object {
    "marginBottom": -2,
  },
  "label": Object {
    "& a": Object {
      "color": "#1476fb",
      "outline": "none",
      "textDecoration": "none",
    },
    "color": "#222222",
    "fontFamily": "'Open Sans', sans-serif",
    "fontSize": 12,
    "lineHeight": "20px",
    "transition": "0.3s all",
  },
  "left": Object {
    "float": "left",
  },
  "top": Object {
    "&:after": Object {
      "clear": "both",
      "content": "\\"\\"",
    },
    "height": 24,
  },
}
`;

exports[`PillJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <UNDEFINED
    group={
      Array [
        Object {
          "id": 1,
          "label": "foo",
        },
        Object {
          "id": 2,
          "label": "bar",
        },
        Object {
          "id": 3,
          "label": "baz",
        },
        Object {
          "id": 4,
          "label": "qux",
        },
      ]
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "function",
    "props": Object {
      "children": [Function],
    },
    "ref": null,
    "rendered": [Function],
    "type": Object {
      "$$typeof": Symbol(react.context),
      "_calculateChangedBits": null,
      "_context": Object {
        "$$typeof": Symbol(react.context),
        "Consumer": [Circular],
        "Provider": Object {
          "$$typeof": Symbol(react.provider),
          "_context": [Circular],
        },
        "_calculateChangedBits": null,
        "_currentRenderer": null,
        "_currentRenderer2": null,
        "_currentValue": Object {
          "classNamePrefix": "",
          "disableStylesGeneration": false,
        },
        "_currentValue2": Object {
          "classNamePrefix": "",
          "disableStylesGeneration": false,
        },
        "_threadCount": 0,
      },
    },
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "function",
      "props": Object {
        "children": [Function],
      },
      "ref": null,
      "rendered": [Function],
      "type": Object {
        "$$typeof": Symbol(react.context),
        "_calculateChangedBits": null,
        "_context": Object {
          "$$typeof": Symbol(react.context),
          "Consumer": [Circular],
          "Provider": Object {
            "$$typeof": Symbol(react.provider),
            "_context": [Circular],
          },
          "_calculateChangedBits": null,
          "_currentRenderer": null,
          "_currentRenderer2": null,
          "_currentValue": Object {
            "classNamePrefix": "",
            "disableStylesGeneration": false,
          },
          "_currentValue2": Object {
            "classNamePrefix": "",
            "disableStylesGeneration": false,
          },
          "_threadCount": 0,
        },
      },
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    Symbol(enzyme.__providerValues__): undefined,
  },
  Symbol(enzyme.__providerValues__): Map {},
}
`;
